[project]
name = "finperks-enrichment"
version = "0.1.0"
description = "Company data enrichment tool with lead scoring and visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[tool.uv]
package = false
